--- a/Complete Pipeline (NLP).ipynb
+++ b/Complete Pipeline (NLP).ipynb
@@ -1,4 +1,34 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1><center><font size=\"6\"> Kaggle: Personalized Medicine - Redefining Cancer Treatment</font></center></h1>\n",
+    "\n",
+    "<h3><center><font size=\"4\"> https://www.kaggle.com/c/msk-redefining-cancer-treatment </font></center></h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem Statement\n",
+    "Although it is know that genetic testing is going to disrupt the way diseases like cancer are treated, this is only partially happening due to the huge amount of manual work this task required.\n",
+    "\n",
+    "A cancer tumor can have thousands of genetic mutations. Classifying every single genetic mutation based on evidence from text-based clinical literature is a very time-consuming task since a clinical pathologist has to manually review and classify every single genetic mutation based on evidence from text-based clinical literature.\n",
+    "\n",
+    "\n",
+    "#  Objective:\n",
+    "\n",
+    "- Develop a Machine Learning algorithm to classify the mutations that contribute to tumor growth (drivers) from the neutral mutations (passengers) based on clinical evidence (text).\n",
+    "\n",
+    "- Design a highly accurte ML pipeline since this is a medical related problem and error can be really costly. Therefore, we would like to have result for each class in terms of Probablity (More accurate model at cost of lager processing time of ML algorithm is acceptable). \n",
+    "\n",
+    "- Have a highly interpritable model since a medical practitionar needs to provide proper reasonining on why ML algorithm is predicting any class.\n",
+    "\n",
+    "Note: This is not a trivial task since interpreting clinical evidence is very challenging even for human specialists. Therefore, modeling the clinical evidence (text) will be critical for the success.\n",
+    "\n",
     "# Dataset:\n",
     "This Kaggle project has two traning datasets, which are linked via the ID field:\n",
     "- training_variants - a comma separated file containing the description of the genetic mutations used for training. Fields are\n",
